[tool.poetry]
name = "vancouver-bike-map"
version = "0.1.0"
description = ""
authors = ["Christopher Porter"]

[tool.poetry.dependencies]
python = "^3.9.8"
geopandas = "^0.14.0"
jupyterlab = "^4.0.6"
matplotlib = "^3.8.0"
contextily = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
